# CVDTraderRust

./: .gitignore  Cargo.toml  README.md  cvd_trader.db
benches/: cvd_benchmarks.rs
docs/: architecture_overview.md  changelog.md  codereview.md  environment_setup.md  handover.md  issues.md  module_api.md  module_core.md  module_execution.md  module_hyperliquid.md  module_main.md  module_market_data.md  module_risk.md  module_strategy.md  plan-eng-review-summary.md  setup.md  stateoftheproject.md  todos.md
skills/documentation/: SKILL.md
skills/plan-eng-review/: SKILL.md
skills/rust-async-patterns/: SKILL.md
skills/rust-pro/: SKILL.md
src/: lib.rs  main.rs
src/api/: server.rs
src/core/: config.rs  logger.rs  mod.rs  rounding.rs  state.rs
src/execution/: gateway.rs  mod.rs  ttl.rs
src/hyperliquid/: client.rs  constants.rs  mod.rs
src/market_data/: candles.rs  event.rs  handler.rs  indicators.rs  mod.rs  profile.rs  vwap.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs
src/persistence/: database.rs  mod.rs  models.rs  repository.rs
src/risk/: manager.rs
src/strategy/: module.rs
tests/: README.md  api_integration_tests.rs  candle_tests.rs  core_tests.rs  end_to_end_tests.rs  integration_tests.rs  mocks.rs  monitoring_tests.rs  persistence_tests.rs  property_tests.rs  simple_test.rs  strategy_tests.rs  stress_tests.rs
